--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -514,7 +514,7 @@ public String testParam(HttpServletRequest request){
 DispatcherServlet中就会将请求参数赋值给相应的形参
 
 ```html
-<a th:href="@{/testParam(username='admin',password=123456)}">测试获取请求参数-->/testParam</a><br>
+<a th:href="@{/testParam(username='admin',password=123456)}">测试获取请求参数-->/testParam</a>
 ```
 
 ```java
