--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -545,17 +545,9 @@ value：指定为形参赋值的请求参数的参数名
 
 required：设置是否必须传输此请求参数，默认值为true
 
-若设置为true时，则当前请求必须传输value所指定的请求参数，若没有传输该请求参数，且没有设置
+若设置为true时，则当前请求必须传输value所指定的请求参数，若没有传输该请求参数，且没有设置defaultValue属性，则页面报错400：Required String parameter 'xxx' is not present；若设置为false，则当前请求不是必须传输value所指定的请求参数，若没有传输，则注解所标识的形参的值为null
 
-defaultValue属性，则页面报错400：Required String parameter 'xxx' is not present；若设置为
-
-false，则当前请求不是必须传输value所指定的请求参数，若没有传输，则注解所标识的形参的值为
-
-null
-
-defaultValue：不管required属性值为true或false，当value所指定的请求参数没有传输或传输的值
-
-为""时，则使用默认值为形参赋值
+defaultValue：不管required属性值为true或false，当value所指定的请求参数没有传输或传输的值为""时，则使用默认值为形参赋值
 
 ## 4.4、@RequestHeader
 
