--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -583,8 +583,7 @@ public String testPOJO(User user){
     System.out.println(user);
     return "success";
 }
-//最终结果-->User{id=null, username='张三', password='123', age=23, sex='男',
-email='123@qq.com'}
+// 最终结果-->User{id=null, username='张三', password='123', age=23, sex='男', email='123@qq.com'}
 ```
 
 ## 4.7、解决获取请求参数的乱码问题
