--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -610,9 +610,8 @@ public String testPOJO(User user){
 </filter-mapping>
 ```
 
-> 注：
+> 注：SpringMVC中处理编码的过滤器一定要配置到其他过滤器之前，否则无效
 >
-> SpringMVC中处理编码的过滤器一定要配置到其他过滤器之前，否则无效
 
 # 5、域对象共享数据
 
