--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -664,7 +664,7 @@ public String testMap(Map<String, Object> map){
 }
 ```
 
-5.5、使用ModelMap向request域对象共享数据
+## 5.5、使用ModelMap向request域对象共享数据
 
 ```java
 @RequestMapping("/testModelMap")
