--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -676,7 +676,8 @@ public String testModelMap(ModelMap modelMap){
 
 ## 5.6、Model、ModelMap、Map的关系
 
-Model、ModelMap、Map类型的参数其实本质上都是 BindingAwareModelMap 类型的
+> Model、ModelMap、Map类型的参数其实本质上都是 BindingAwareModelMap 类型的
+>
 
 ```java
 public interface Model{}
