--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -719,9 +719,7 @@ SpringMVC视图的种类很多，默认有转发视图和重定向视图
 
 ## 6.1、ThymeleafView
 
-当控制器方法中所设置的视图名称没有任何前缀时，此时的视图名称会被SpringMVC配置文件中所配置的视图解析器解析，视图名称拼接视图前缀和视图
-
-后缀所得到的最终路径，会通过转发的方式实现跳转
+当控制器方法中所设置的视图名称没有任何前缀时，此时的视图名称会被SpringMVC配置文件中所配置的视图解析器解析，视图名称拼接视图前缀和视图后缀所得到的最终路径，会通过转发的方式实现跳转
 
 ```java
 @RequestMapping("/testHello")
@@ -734,11 +732,11 @@ public String testHello(){
 
 ## 6.2、转发视图
 
-SpringMVC中默认的转发视图是InternalResourceView
+SpringMVC 中默认的转发视图是 InternalResourceView
 
-SpringMVC中创建转发视图的情况：
+SpringMVC 中创建转发视图的情况：
 
-当控制器方法中所设置的视图名称以"forward:"为前缀时，创建InternalResourceView视图，此时的视图名称不会被SpringMVC配置文件中所配置的视图解析器解析，而是会将前缀"forward:"去掉，剩余部分作为最终路径通过转发的方式实现跳转
+当控制器方法中所设置的视图名称以"forward:"为前缀时，创建 InternalResourceView 视图，此时的视图名称不会被 SpringMVC 配置文件中所配置的视图解析器解析，而是会将前缀"forward:"去掉，剩余部分作为最终路径通过转发的方式实现跳转
 
 例如"forward:/"，"forward:/employee"
 
@@ -753,11 +751,11 @@ public String testForward(){
 
 ## 6.3、重定向视图
 
-SpringMVC中默认的重定向视图是RedirectView
+SpringMVC 中默认的重定向视图是 RedirectView
 
-当控制器方法中所设置的视图名称以"redirect:"为前缀时，创建RedirectView视图，此时的视图名称不
+当控制器方法中所设置的视图名称以"redirect:"为前缀时，创建 RedirectView 视图，此时的视图名称不
 
-会被SpringMVC配置文件中所配置的视图解析器解析，而是会将前缀"redirect:"去掉，剩余部分作为最终路径通过重定向的方式实现跳转
+会被 SpringMVC 配置文件中所配置的视图解析器解析，而是会将前缀"redirect:"去掉，剩余部分作为最终路径通过重定向的方式实现跳转
 
 例如"redirect:/"，"redirect:/employee"
 
@@ -770,17 +768,12 @@ public String testRedirect(){
 
 ![32](img/32.png)
 
-> 注：
+> 注：重定向视图在解析时，会先将redirect:前缀去掉，然后会判断剩余部分是否以/开头，若是则会自动拼接上下文路径
 >
-> 重定向视图在解析时，会先将redirect:前缀去掉，然后会判断剩余部分是否以/开头，若是则会自
->
-> 动拼接上下文路径
 
 ## 6.4、视图控制器view-controller
 
-当控制器方法中，仅仅用来实现页面跳转，即只需要设置视图名称时，可以将处理器方法使用view
-
-controller标签进行表示
+当控制器方法中，仅仅用来实现页面跳转，即只需要设置视图名称时，可以将处理器方法使用 view-controller 标签进行表示
 
 ```xml
 <!--
@@ -790,13 +783,8 @@ controller标签进行表示
 <mvc:view-controller path="/testView" view-name="success"></mvc:view-controller>
 ```
 
-> 注：
+> 注：当SpringMVC中设置任何一个view-controller时，其他控制器中的请求映射将全部失效，此时需要在SpringMVC的核心配置文件中设置开启mvc注解驱动的标签：<mvc:annotation-driven />
 >
-> 当SpringMVC中设置任何一个view-controller时，其他控制器中的请求映射将全部失效，此时需
->
-> 要在SpringMVC的核心配置文件中设置开启mvc注解驱动的标签：
->
-> <mvc:annotation-driven />
 
 # 7、RESTful
 
@@ -806,27 +794,21 @@ REST：**Re**presentational **S**tate **T**ransfer，表现层资源状态转移
 
 ### ①资源
 
-资源是一种看待服务器的方式，即，将服务器看作是由很多离散的资源组成。每个资源是服务器上一个可命名的抽象概念。因为资源是一个抽象的概念，所以它不仅仅能代表服务器文件系统中的一个文件、数据库中的一张表等等具体的东西，可以将资源设计的要多抽象有多抽象，只要想象力允许而且客户端应用开发者能够理解。与面向对象设计类似，资源是以名词为核心来组织的，首先关注的是名词。一个资源可以由一个或多个URI来标识。URI既是资源的名称，也是资源在Web上的地址。对某个资源感兴趣的客户端应用，可以通过资源的URI与其进行交互。
+​      资源是一种看待服务器的方式，即，将服务器看作是由很多离散的资源组成。每个资源是服务器上一个可命名的抽象概念。因为资源是一个抽象的概念，所以它不仅仅能代表服务器文件系统中的一个文件、数据库中的一张表等等具体的东西，可以将资源设计的要多抽象有多抽象，只要想象力允许而且客户端应用开发者能够理解。与面向对象设计类似，资源是以名词为核心来组织的，首先关注的是名词。一个资源可以由一个或多个URI来标识。URI既是资源的名称，也是资源在Web上的地址。对某个资源感兴趣的客户端应用，可以通过资源的URI与其进行交互。
 
 ### ②资源的表述
 
-资源的表述是一段对于资源在某个特定时刻的状态的描述。可以在客户端-服务器端之间转移（交
-
-换）。资源的表述可以有多种格式，例如HTML/XML/JSON/纯文本/图片/视频/音频等等。资源的表述格式可以通过协商机制来确定。请求-响应方向的表述通常使用不同的格式。
+资源的表述是一段对于资源在某个特定时刻的状态的描述。可以在客户端-服务器端之间转移（交换）。资源的表述可以有多种格式，例如HTML/XML/JSON/纯文本/图片/视频/音频等等。资源的表述格式可以通过协商机制来确定。请求-响应方向的表述通常使用不同的格式。
 
 ### ③状态转移
 
-状态转移说的是：在客户端和服务器端之间转移（transfer）代表资源状态的表述。通过转移和操作资
-
-源的表述，来间接实现操作资源的目的。
+状态转移说的是：在客户端和服务器端之间转移（transfer）代表资源状态的表述。通过转移和操作资源的表述，来间接实现操作资源的目的。
 
 ## 7.2、RESTful的实现
 
 具体说，就是 HTTP 协议里面，四个表示操作方式的动词：GET、POST、PUT、DELETE。
 
-它们分别对应四种基本操作：GET 用来获取资源，POST 用来新建资源，PUT 用来更新资源，DELETE
-
-用来删除资源。
+它们分别对应四种基本操作：GET 用来获取资源，POST 用来新建资源，PUT 用来更新资源，DELETE 用来删除资源。
 
 REST 风格提倡 URL 地址使用统一的风格设计，从前到后各个单词使用斜杠分开，不使用问号键值对方式携带请求参数，而是将要发送给服务器的数据作为 URL 地址的一部分，以保证整体风格的一致性。
 
