--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -709,17 +709,17 @@ public String testApplication(HttpSession session){
 
 # 6、SpringMVC的视图
 
-SpringMVC中的视图是View接口，视图的作用渲染数据，将模型Model中的数据展示给用户
+SpringMVC 中的视图是 View 接口，视图的作用渲染数据，将模型 Model 中的数据展示给用户
 
-SpringMVC视图的种类很多，默认有转发视图和重定向视图
+SpringMVC 视图的种类很多，默认有`转发视图`和`重定向视图`
 
-当工程引入jstl的依赖，转发视图会自动转换为JstlView
+当工程引入 jstl 的依赖，转发视图会自动转换为 JstlView
 
-若使用的视图技术为Thymeleaf，在SpringMVC的配置文件中配置了Thymeleaf的视图解析器，由此视图解析器解析之后所得到的是ThymeleafView
+若使用的视图技术为 Thymeleaf，在 SpringMVC 的配置文件中配置了 Thymeleaf 的视图解析器，由此视图解析器解析之后所得到的是 ThymeleafView
 
 ## 6.1、ThymeleafView
 
-当控制器方法中所设置的视图名称没有任何前缀时，此时的视图名称会被SpringMVC配置文件中所配置的视图解析器解析，视图名称拼接视图前缀和视图后缀所得到的最终路径，会通过转发的方式实现跳转
+当控制器方法中所设置的视图名称没有任何前缀时，此时的视图名称会被 SpringMVC 配置文件中所配置的视图解析器解析，视图名称拼接视图前缀和视图后缀所得到的最终路径，会通过转发的方式实现跳转
 
 ```java
 @RequestMapping("/testHello")
