--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -840,7 +840,7 @@ _method的值，因此请求参数_method的值才是最终的请求方式
 ```xml
 <filter>
     <filter-name>HiddenHttpMethodFilter</filter-name>
-    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filterclass>
+    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
 </filter>
 <filter-mapping>
     <filter-name>HiddenHttpMethodFilter</filter-name>
