--- a/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
+++ b/JAVA/Java--微服务核心/04.SSM/3.SpringMVC.md
@@ -1728,7 +1728,7 @@ public String index(){
 
 # 14、SpringMVC执行流程
 
-## 14.1、SpringMVC常用组件
+## 14.1、SpringMVC 常用组件
 
 - DispatcherServlet：**前端控制器**，不需要工程师开发，由框架提供
 
@@ -1756,7 +1756,7 @@ public String index(){
 
 ## 14.2、DispatcherServlet初始化过程
 
-DispatcherServlet 本质上是一个 Servlet，所以天然的遵循 Servlet 的生命周期。所以宏观上是 Servlet生命周期来进行调度。
+DispatcherServlet 本质上是一个 Servlet，所以天然的遵循 Servlet 的生命周期。所以宏观上是 Servlet 生命周期来进行调度。
 
 ![33](img/33.png)
 
@@ -1845,11 +1845,11 @@ protected WebApplicationContext createWebApplicationContext(@Nullable Applicatio
 
 ### ③  DispatcherServlet初始化策略
 
-FrameworkServlet创建WebApplicationContext后，刷新容器，调用onRefresh(wac)，此方法在
+FrameworkServlet 创建 WebApplicationContext 后，刷新容器，调用 onRefresh(wac)，此方法在
 
-DispatcherServlet中进行了重写，调用了initStrategies(context)方法，初始化策略，即初始化
+DispatcherServlet 中进行了重写，调用了 initStrategies(context) 方法，初始化策略，即初始化
 
-DispatcherServlet的各个组件
+DispatcherServlet 的各个组件
 
 所在类：org.springframework.web.servlet.DispatcherServlet
 
@@ -1867,15 +1867,13 @@ protected void initStrategies(ApplicationContext context) {
 }
 ```
 
-## 14.3、DispatcherServlet调用组件处理请求
+## 14.3、DispatcherServlet 调用组件处理请求
 
 ### ①  processRequest()
 
-FrameworkServlet重写HttpServlet中的service()和doXxx()，这些方法中调用了
+FrameworkServlet 重写 HttpServlet 中的 service() 和 doXxx()，这些方法中调用了 processRequest(request, response) 
 
-processRequest(request, response)
-
-所在类：org.springframework.web.servlet.FrameworkServlet
+所在类：org.springframework.web.servlet.FrameworkServlet 
 
 ```java
 protected final void processRequest(HttpServletRequest request,HttpServletResponse response)throws ServletException, IOException
