--- a/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
+++ b/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
@@ -433,9 +433,7 @@ System.out.println("结果："+result);
 
 > 注意：
 >
-> 1、查询的标签select必须设置属性resultType或resultMap，用于设置实体类和数据库表的映射
->
-> 关系
+> 1、查询的标签select必须设置属性resultType或resultMap，用于设置实体类和数据库表的映射关系
 >
 > resultType：自动映射，用于属性名和表中字段名一致的情况
 >
@@ -443,57 +441,38 @@ System.out.println("结果："+result);
 
 # 5、MyBatis获取参数值的两种方式
 
-> MyBatis获取参数值的两种方式：**${}**和**#{}**
+> MyBatis获取参数值的两种方式：`${}`和`#{}`
 >
-> ${}的本质就是字符串拼接，#{}的本质就是占位符赋值
+> `${}`的本质就是字符串拼接，`#{}`的本质就是占位符赋值
 >
-> ${}使用字符串拼接的方式拼接sql，若为字符串类型或日期类型的字段进行赋值时，需要手动加单引
+> `${}`使用字符串拼接的方式拼接sql，若为字符串类型或日期类型的字段进行赋值时，需要手动加单引号；
 >
-> 号；但是#{}使用占位符赋值的方式拼接sql，此时为字符串类型或日期类型的字段进行赋值时，
->
-> 可以自动添加单引号
+> 但是`#{}`使用占位符赋值的方式拼接sql，此时为字符串类型或日期类型的字段进行赋值时，可以自动添加单引号；
 
 ## 5.1、单个字面量类型的参数
 
-> 若mapper接口中的方法参数为单个的字面量类型
+> 若mapper接口中的方法参数为单个的字面量类型，此时可以使用`${}`和`#{}`以任意的名称获取参数的值，注意`${}`需要手动加单引号
 >
-> 此时可以使用${}和#{}以任意的名称获取参数的值，注意${}需要手动加单引号
 
 ## 5.2、多个字面量类型的参数
 
-> 若mapper接口中的方法参数为多个时
+> 若mapper接口中的方法参数为多个时，此时MyBatis会自动将这些参数放在一个map集合中，以arg0,arg1...为键，以参数为值；以param1,param2...为键，以参数为值；因此只需要通过`${}`和`#{}`访问map集合的键就可以获取相对应的值，注意${}需要手动加单引号
 >
-> 此时MyBatis会自动将这些参数放在一个map集合中，以arg0,arg1...为键，以参数为值；以
->
-> param1,param2...为键，以参数为值；因此只需要通过${}和#{}访问map集合的键就可以获取相
->
-> 对应的值，注意${}需要手动加单引号
 
 ## 5.3、map集合类型的参数
 
-> 若mapper接口中的方法需要的参数为多个时，此时可以手动创建map集合，将这些数据放在
+> 若mapper接口中的方法需要的参数为多个时，此时可以手动创建map集合，将这些数据放在map中只需要通过`${}`和`#{}`访问map集合的键就可以获取相对应的值，注意${}需要手动加单引号
 >
-> map中
->
-> 只需要通过${}和#{}访问map集合的键就可以获取相对应的值，注意${}需要手动加单引号
 
 ## 5.4、实体类类型的参数
 
-> 若mapper接口中的方法参数为实体类对象时
+> 若mapper接口中的方法参数为实体类对象时，此时可以使用`${}`和`#{}`，通过访问实体类对象中的属性名获取属性值，注意`${}`需要手动加单引号
 >
-> 此时可以使用${}和#{}，通过访问实体类对象中的属性名获取属性值，注意${}需要手动加单引号
 
 ## 5.5、使用@Param标识参数
 
-> 可以通过@Param注解标识mapper接口中的方法参数
+> 可以通过@Param注解标识mapper接口中的方法参数，此时，会将这些参数放在map集合中，以@Param注解的value属性值为键，以参数为值；以 param1,param2... 为键，以参数为值；只需要通过`${}`和`#{}`访问map集合的键就可以获取相对应的值，注意${}需要手动加单引号
 >
-> 此时，会将这些参数放在map集合中，以@Param注解的value属性值为键，以参数为值；以
->
-> param1,param2...为键，以参数为值；只需要通过${}和#{}访问map集合的键就可以获取相对应
->
-> 的值，
->
-> 注意${}需要手动加单引号
 
 # 6、MyBatis的各种查询功能
 
@@ -501,10 +480,10 @@ System.out.println("结果："+result);
 
 ```java
 /**
-* 根据用户id查询用户信息
-* @param id
-* @return
-*/
+ * 根据用户id查询用户信息
+ * @param id
+ * @return
+ */
 User getUserById(@Param("id") int id);
 ```
 
@@ -519,9 +498,9 @@ User getUserById(@Param("id") int id);
 
 ```java
 /**
-* 查询所有用户信息
-* @return
-*/
+ * 查询所有用户信息
+ * @return
+ */
 List<User> getUserList();
 ```
 
@@ -540,13 +519,13 @@ List<User> getUserList();
 
 ```java
 /**
-* 查询用户的总记录数
-* @return
-* 在MyBatis中，对于Java中常用的类型都设置了类型别名
-* 例如： java.lang.Integer-->int|integer
-* 例如： int-->_int|_integer
-* 例如： Map-->map,List-->list
-*/
+ * 查询用户的总记录数
+ * @return
+ * 在MyBatis中，对于Java中常用的类型都设置了类型别名
+ * 例如： java.lang.Integer-->int|integer
+ * 例如： int-->_int|_integer
+ * 例如： Map-->map,List-->list
+ */
 int getCount();
 ```
 
@@ -561,10 +540,10 @@ int getCount();
 
 ```java
 /**
-* 根据用户id查询用户信息为map集合
-* @param id
-* @return
-*/
+ * 根据用户id查询用户信息为map集合
+ * @param id
+ * @return
+ */
 Map<String, Object> getUserToMap(@Param("id") int id);
 ```
 
@@ -582,11 +561,10 @@ Map<String, Object> getUserToMap(@Param("id") int id);
 
 ```java
 /**
-* 查询所有用户信息为map集合
-* @return
-* 将表中的数据以map集合的方式查询，一条数据对应一个map；若有多条数据，就会产生多个map集合，此
-时可以将这些map放在一个list集合中获取
-*/
+ * 查询所有用户信息为map集合
+ * @return
+ * 将表中的数据以map集合的方式查询，一条数据对应一个map；若有多条数据，就会产生多个map集合，此时可以将这些map放在一个list集合中获取
+ */
 List<Map<String, Object>> getAllUserToMap();
 ```
 
@@ -601,12 +579,10 @@ List<Map<String, Object>> getAllUserToMap();
 
 ```java
 /**
-* 查询所有用户信息为map集合
-* @return
-* 将表中的数据以map集合的方式查询，一条数据对应一个map；若有多条数据，就会产生多个map集合，并
-且最终要以一个map的方式返回数据，此时需要通过@MapKey注解设置map集合的键，值是每条数据所对应的
-map集合
-*/
+ * 查询所有用户信息为map集合
+ * @return
+ * 将表中的数据以map集合的方式查询，一条数据对应一个map；若有多条数据，就会产生多个map集合，并且最终要以一个map的方式返回数据，此时需要通过@MapKey注解设置map集合的键，值是每条数据所对应的map集合
+ */
 @MapKey("id")
 Map<String, Object> getAllUserToMap();
 ```
@@ -631,10 +607,10 @@ Map<String, Object> getAllUserToMap();
 
 ```java
 /**
-* 测试模糊查询
-* @param mohu
-* @return
-*/
+ * 测试模糊查询
+ * @param mohu
+ * @return
+ */
 List<User> testMohu(@Param("mohu") String mohu);
 ```
 
@@ -651,10 +627,10 @@ List<User> testMohu(@Param("mohu") String mohu);
 
 ```java
 /**
-* 批量删除
-* @param ids
-* @return
-*/
+ * 批量删除
+ * @param ids
+ * @return
+ */
 int deleteMore(@Param("ids") String ids);
 ```
 
@@ -669,10 +645,10 @@ int deleteMore(@Param("ids") String ids);
 
 ```java
 /**
-* 动态设置表名，查询所有的用户信息
-* @param tableName
-* @return
-*/
+ * 动态设置表名，查询所有的用户信息
+ * @param tableName
+ * @return
+ */
 List<User> getAllUser(@Param("tableName") String tableName);
 ```
 
@@ -699,12 +675,12 @@ List<User> getAllUser(@Param("tableName") String tableName);
 
 ```java
 /**
-* 添加用户信息
-* @param user
-* @return
-* useGeneratedKeys：设置使用自增的主键
-* keyProperty：因为增删改有统一的返回值是受影响的行数，因此只能将获取的自增的主键放在传输的参数user对象的某个属性中
-*/
+ * 添加用户信息
+ * @param user
+ * @return
+ * useGeneratedKeys：设置使用自增的主键
+ * keyProperty：因为增删改有统一的返回值是受影响的行数，因此只能将获取的自增的主键放在传输的参数user对象的某个属性中
+ */
 int insertUser(User user);
 ```
 
@@ -750,17 +726,11 @@ select id,user_name,password,age,sex from t_user where user_name likeconcat('%',
 </select>
 ```
 
-> 若字段名和实体类中的属性名不一致，但是字段名符合数据库的规则（使用_），实体类中的属性
+> 若字段名和实体类中的属性名不一致，但是字段名符合数据库的规则（使用_），实体类中的属性名符合Java的规则（使用驼峰），此时也可通过以下两种方式处理字段名和实体类中的属性的映射关系
 >
-> 名符合Java的规则（使用驼峰）
+> a）可以通过为字段起别名的方式，保证和实体类中的属性名保持一致
 >
-> 此时也可通过以下两种方式处理字段名和实体类中的属性的映射关系
->
-> a>可以通过为字段起别名的方式，保证和实体类中的属性名保持一致
->
-> b>可以在MyBatis的核心配置文件中设置一个全局配置信息mapUnderscoreToCamelCase，可
->
-> 以在查询表中数据时，自动将_类型的字段名转换为驼峰
+> b）可以在MyBatis的核心配置文件中设置一个全局配置信 mapUnderscoreToCamelCase，可以在查询表中数据时，自动将_类型的字段名转换为驼峰
 >
 > 例如：字段名user_name，设置了mapUnderscoreToCamelCase，此时字段名就会转换为
 >
@@ -768,9 +738,8 @@ select id,user_name,password,age,sex from t_user where user_name likeconcat('%',
 
 ## 8.2、多对一映射处理
 
-> 场景模拟：
+> 场景模拟：查询员工信息以及员工所对应的部门信息
 >
-> 查询员工信息以及员工所对应的部门信息
 
 ### 8.2.1、级联方式处理映射关系
 
@@ -844,10 +813,10 @@ Emp getEmpByStep(@Param("eid") int eid);
 
 ```java
 /**
-* 分步查询的第二步： 根据员工所对应的did查询部门信息
-* @param did
-* @return
-*/
+ * 分步查询的第二步： 根据员工所对应的did查询部门信息
+ * @param did
+ * @return
+ */
 Dept getEmpDeptByStep(@Param("did") int did);
 ```
 
@@ -864,10 +833,10 @@ Dept getEmpDeptByStep(@Param("did") int did);
 
 ```java
 /**
-* 根据部门id查新部门以及部门中的员工信息
-* @param did
-* @return
-*/
+ * 根据部门id查新部门以及部门中的员工信息
+ * @param did
+ * @return
+ */
 Dept getDeptEmpByDid(@Param("did") int did);
 ```
 
@@ -897,10 +866,10 @@ Dept getDeptEmpByDid(@Param("did") int did);
 
 ```java
 /**
-* 分步查询部门和部门中的员工
-* @param did
-* @return
-*/
+ * 分步查询部门和部门中的员工
+ * @param did
+ * @return
+ */
 Dept getDeptByStep(@Param("did") int did);
 ```
 
@@ -921,10 +890,10 @@ Dept getDeptByStep(@Param("did") int did);
 
 ```java
 /**
-* 根据部门id查询员工信息
-* @param did
-* @return
-*/
+ * 根据部门id查询员工信息
+ * @param did
+ * @return
+ */
 List<Emp> getEmpListByDid(@Param("did") int did);
 ```
 
@@ -943,17 +912,13 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 >
 > aggressiveLazyLoading：当开启时，任何方法的调用都会加载该对象的所有属性。否则，每个属性会按需加载
 >
-> 此时就可以实现按需加载，获取的数据是什么，就只会执行相应的sql。此时可通过association和
+> 此时就可以实现按需加载，获取的数据是什么，就只会执行相应的sql。此时可通过 association 和 collection 中的 fetchType 属性设置当前的分步查询是否使用延迟加载， fetchType="lazy(延迟加载)|eager(立即加载)"
 >
-> collection中的fetchType属性设置当前的分步查询是否使用延迟加载， fetchType="lazy(延迟加
->
-> 载)|eager(立即加载)"
 
 # 9、动态SQL
 
-> Mybatis框架的动态SQL技术是一种根据特定条件动态拼装SQL语句的功能，它存在的意义是为了
+> Mybatis框架的动态SQL技术是一种根据特定条件动态拼装SQL语句的功能，它存在的意义是为了解决 拼接SQL语句字符串时的痛点问题。
 >
-> 解决 拼接SQL语句字符串时的痛点问题。
 
 ## 9.1、if
 
@@ -981,11 +946,9 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 
 > where和if一般结合使用：
 >
-> a>若where标签中的if条件都不满足，则where标签没有任何功能，即不会添加where关键字
+> a）若 where 标签中的 if 条件都不满足，则 where 标签没有任何功能，即不会添加 where 关键字
 >
-> b>若where标签中的if条件满足，则where标签会自动添加where关键字，并将条件最前方多余的
->
-> and去掉
+> b）若 where 标签中的 if 条件满足，则 where 标签会自动添加 where 关键字，并将条件最前方多余的 and 去掉
 >
 > 注意：where标签不能去掉条件最后多余的and
 
@@ -1039,7 +1002,7 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 
 ## 9.4、choose、when、otherwise
 
-> choose、when、 otherwise相当于if...else if..else
+> choose、when、 otherwise 相当于 if...else if..else
 
 ```xml
 <!--List<Emp> getEmpListByChoose(Emp emp);-->
@@ -1105,77 +1068,75 @@ select <include refid="empColumns"></include> from t_emp
 
 ## 10.1、MyBatis的一级缓存
 
-一级缓存是SqlSession级别的，通过同一个SqlSession查询的数据会被缓存，下次查询相同的数据，就会从缓存中直接获取，不会从数据库重新访问
-
-使一级缓存失效的四种情况：
-
-1) 不同的SqlSession对应不同的一级缓存
-
-2) 同一个SqlSession但是查询条件不同
-
-3) 同一个SqlSession两次查询期间执行了任何一次增删改操作
-
-4) 同一个SqlSession两次查询期间手动清空了缓存
+> 一级缓存是SqlSession级别的，通过同一个SqlSession查询的数据会被缓存，下次查询相同的数据，就会从缓存中直接获取，不会从数据库重新访问
+>
+> 使一级缓存失效的四种情况：
+>
+> 1) 不同的SqlSession对应不同的一级缓存
+>
+> 2) 同一个SqlSession但是查询条件不同
+>
+> 3) 同一个SqlSession两次查询期间执行了任何一次增删改操作
+>
+> 4) 同一个SqlSession两次查询期间手动清空了缓存
 
 ## 10.2、MyBatis的二级缓存
 
-二级缓存是SqlSessionFactory级别，通过同一个SqlSessionFactory创建的SqlSession查询的结果会被
-
-缓存；此后若再次执行相同的查询语句，结果就会从缓存中获取
-
-二级缓存开启的条件：
-
-a>在核心配置文件中，设置全局配置属性cacheEnabled="true"，默认为true，不需要设置
-
-b>在映射文件中设置标签<cache/>
-
-c>二级缓存必须在SqlSession关闭或提交之后有效
-
-d>查询的数据所转换的实体类类型必须实现序列化的接口
-
-使二级缓存失效的情况：
-
-两次查询之间执行了任意的增删改，会使一级和二级缓存同时失效
+> 二级缓存是SqlSessionFactory级别，通过同一个SqlSessionFactory创建的SqlSession查询的结果会被缓存；此后若再次执行相同的查询语句，结果就会从缓存中获取
+>
+> 二级缓存开启的条件：
+>
+> a>在核心配置文件中，设置全局配置属性cacheEnabled="true"，默认为true，不需要设置
+>
+> b>在映射文件中设置标签 <cache/> 
+>
+> c>二级缓存必须在SqlSession关闭或提交之后有效
+>
+> d>查询的数据所转换的实体类类型必须实现序列化的接口使二级缓存失效的情况：两次查询之间执行了任意的增删改，会使一级和二级缓存同时失效
+>
 
 ## 10.3、二级缓存的相关配置
 
 在mapper配置文件中添加的cache标签可以设置一些属性：
 
-①eviction属性：缓存回收策略，默认的是 LRU。
+#### ①  eviction属性：缓存回收策略，默认的是 LRU。
 
-LRU（Least Recently Used） – 最近最少使用的：移除最长时间不被使用的对象。
+> LRU（Least Recently Used） – 最近最少使用的：移除最长时间不被使用的对象。
+>
+> FIFO（First in First out） – 先进先出：按对象进入缓存的顺序来移除它们。
+>
+> SOFT – 软引用：移除基于垃圾回收器状态和软引用规则的对象。
+>
+> WEAK – 弱引用：更积极地移除基于垃圾收集器状态和弱引用规则的对象。
+>
 
-FIFO（First in First out） – 先进先出：按对象进入缓存的顺序来移除它们。
+#### ②flushInterval属性：刷新间隔，单位毫秒
 
-SOFT – 软引用：移除基于垃圾回收器状态和软引用规则的对象。
+> 默认情况是不设置，也就是没有刷新间隔，缓存仅仅调用语句时刷新
+>
 
-WEAK – 弱引用：更积极地移除基于垃圾收集器状态和弱引用规则的对象。
+#### ③size属性：引用数目，正整数
 
-②flushInterval属性：刷新间隔，单位毫秒
+> 代表缓存最多可以存储多少个对象，太大容易导致内存溢出
+>
 
-默认情况是不设置，也就是没有刷新间隔，缓存仅仅调用语句时刷新
+#### ④readOnly属性：只读， true/false
 
-③size属性：引用数目，正整数
-
-代表缓存最多可以存储多少个对象，太大容易导致内存溢出
-
-④readOnly属性：只读， true/false
-
-true：只读缓存；会给所有调用者返回缓存对象的相同实例。因此这些对象不能被修改。这提供了 很重要的性能优势。
-
-false：读写缓存；会返回缓存对象的拷贝（通过序列化）。这会慢一些，但是安全，因此默认是
-
-false。
+> true：只读缓存；会给所有调用者返回缓存对象的相同实例。因此这些对象不能被修改。这提供了 很重要的性能优势；
+>
+> false：读写缓存；会返回缓存对象的拷贝（通过序列化）。这会慢一些，但是安全，因此默认是 false。
+>
 
 ## 10.4、MyBatis缓存查询的顺序
 
-先查询二级缓存，因为二级缓存中可能会有其他程序已经查出来的数据，可以拿来直接使用。
-
-如果二级缓存没有命中，再查询一级缓存
-
-如果一级缓存也没有命中，则查询数据库
-
-SqlSession关闭之后，一级缓存中的数据会写入二级缓存
+> 先查询二级缓存，因为二级缓存中可能会有其他程序已经查出来的数据，可以拿来直接使用。
+>
+> 如果二级缓存没有命中，再查询一级缓存；
+>
+> 如果一级缓存也没有命中，则查询数据库
+>
+> SqlSession关闭之后，一级缓存中的数据会写入二级缓存
+>
 
 ## 10.5、整合第三方缓存EHCache
 
@@ -1275,19 +1236,17 @@ xsi:noNamespaceSchemaLocation="../config/ehcache.xsd">
 
 # 11、MyBatis的逆向工程
 
-> 正向工程：先创建Java实体类，由框架负责根据实体类生成数据库表。 Hibernate是支持正向工
->
-> 程的。
+> 正向工程：先创建Java实体类，由框架负责根据实体类生成数据库表。 Hibernate是支持正向工程的。
 >
 > 逆向工程：先创建数据库表，由框架负责根据数据库表，反向生成如下资源：
 >
 > - Java实体类
-> - Mapper接口
+>- Mapper接口
 > - Mapper映射文件
 
 ## 11.1、创建逆向工程的步骤
 
-### ①添加依赖和插件
+### ①  添加依赖和插件
 
 ```xml
 <!-- 依赖MyBatis核心包 -->
@@ -1345,9 +1304,9 @@ xsi:noNamespaceSchemaLocation="../config/ehcache.xsd">
 </build>
 ```
 
-### ②创建MyBatis的核心配置文件
+### ②  创建MyBatis的核心配置文件
 
-### ③创建逆向工程的配置文件
+### ③  创建逆向工程的配置文件
 
 > 文件名必须是：generatorConfig.xml
 
@@ -1391,11 +1350,11 @@ xsi:noNamespaceSchemaLocation="../config/ehcache.xsd">
 </generatorConfiguration>
 ```
 
-### ④执行MBG插件的generate目标
+### ④  执行MBG插件的generate目标
 
 ![3](img/3.png)
 
-### ⑤效果
+### ⑤  效果
 
 ![4](img/4.png)
 
@@ -1460,7 +1419,7 @@ pageSize=4，pageNum=6，index=20 limit 8,4
 
 ## 12.1、分页插件的使用步骤
 
-### ①添加依赖
+### ①  添加依赖
 
 ```xml
 <dependency>
@@ -1470,9 +1429,9 @@ pageSize=4，pageNum=6，index=20 limit 8,4
 </dependency>
 ```
 
-### ②配置分页插件
+### ②  配置分页插件
 
-在MyBatis的核心配置文件中配置插件
+在 MyBatis 的核心配置文件中配置插件 
 
 ```xml
 <plugins>
@@ -1483,13 +1442,13 @@ pageSize=4，pageNum=6，index=20 limit 8,4
 
 ## 12.2、分页插件的使用
 
-a>在查询功能之前使用PageHelper.startPage(int pageNum, int pageSize)开启分页功能
+a）在查询功能之前使用PageHelper.startPage(int pageNum, int pageSize)开启分页功能
 
 > pageNum：当前页的页码
 >
 > pageSize：每页显示的条数
 
-b>在查询获取list集合之后，使用PageInfo<T> pageInfo = new PageInfo<>(List<T> list, int
+b）在查询获取list集合之后，使用PageInfo<T> pageInfo = new PageInfo<>(List<T> list, int
 
 navigatePages)获取分页相关数据
 
@@ -1497,7 +1456,7 @@ navigatePages)获取分页相关数据
 >
 > navigatePages：导航分页的页码数
 
-c>分页相关数据
+c）分页相关数据
 
 > PageInfo{
 >
