--- a/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
+++ b/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
@@ -732,9 +732,8 @@ select id,user_name,password,age,sex from t_user where user_name likeconcat('%',
 >
 > b）可以在MyBatis的核心配置文件中设置一个全局配置信 mapUnderscoreToCamelCase，可以在查询表中数据时，自动将_类型的字段名转换为驼峰
 >
-> 例如：字段名user_name，设置了mapUnderscoreToCamelCase，此时字段名就会转换为
+> 例如：字段名user_name，设置了mapUnderscoreToCamelCase，此时字段名就会转换为 userName
 >
-> userName
 
 ## 8.2、多对一映射处理
 
