--- a/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
+++ b/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
@@ -778,7 +778,7 @@ select id,user_name,password,age,sex from t_user where user_name likeconcat('%',
 
 ### 8.2.3、分步查询
 
-#### ①查询员工信息
+#### ①  查询员工信息
 
 ```java
 /**
@@ -808,7 +808,7 @@ Emp getEmpByStep(@Param("eid") int eid);
 </select>
 ```
 
-#### ②根据员工所对应的部门id查询部门信息
+#### ②  根据员工所对应的部门id查询部门信息
 
 ```java
 /**
@@ -861,7 +861,7 @@ Dept getDeptEmpByDid(@Param("did") int did);
 
 ### 8.3.2、分步查询
 
-### ①查询部门信息
+#### ①  查询部门信息
 
 ```java
 /**
@@ -885,7 +885,7 @@ Dept getDeptByStep(@Param("did") int did);
 </select>
 ```
 
-### ②根据部门id查询部门中的所有员工
+#### ②  根据部门id查询部门中的所有员工
 
 ```java
 /**
@@ -903,9 +903,7 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 </select>
 ```
 
-> 分步查询的优点：可以实现延迟加载
->
-> 但是必须在核心配置文件中设置全局配置信息：
+> 分步查询的优点：可以实现延迟加载，但是必须在核心配置文件中设置全局配置信息：
 >
 > lazyLoadingEnabled：延迟加载的全局开关。当开启时，所有关联对象都会延迟加载
 >
@@ -921,9 +919,8 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 
 ## 9.1、if
 
-> if标签可通过test属性的表达式进行判断，若表达式的结果为true，则标签中的内容会执行；反之
+> if标签可通过test属性的表达式进行判断，若表达式的结果为true，则标签中的内容会执行；反之标签中的内容不会执行
 >
-> 标签中的内容不会执行
 
 ```xml
 <!--List<Emp> getEmpListByCondition(Emp emp);-->
@@ -970,17 +967,15 @@ List<Emp> getEmpListByDid(@Param("did") int did);
 
 ## 9.3、trim
 
-> trim用于去掉或添加标签中的内容
+> trim用于去掉或添加标签中的内容常用属性：
 >
-> 常用属性：
+> `prefix`：在trim标签中的内容的前面添加某些内容
 >
-> prefix：在trim标签中的内容的前面添加某些内容
+> `prefixOverrides`：在trim标签中的内容的前面去掉某些内容
 >
-> prefixOverrides：在trim标签中的内容的前面去掉某些内容
+> `suffix`：在trim标签中的内容的后面添加某些内容
 >
-> suffix：在trim标签中的内容的后面添加某些内容
->
-> suffixOverrides：在trim标签中的内容的后面去掉某些内容
+> `suffixOverrides`：在trim标签中的内容的后面去掉某些内容
 
 ```xml
 <select id="getEmpListByMoreTJ" resultType="Emp">
@@ -1081,17 +1076,15 @@ select <include refid="empColumns"></include> from t_emp
 
 ## 10.2、MyBatis的二级缓存
 
-> 二级缓存是SqlSessionFactory级别，通过同一个SqlSessionFactory创建的SqlSession查询的结果会被缓存；此后若再次执行相同的查询语句，结果就会从缓存中获取
+> 二级缓存是SqlSessionFactory级别，通过同一个SqlSessionFactory创建的SqlSession查询的结果会被缓存；此后若再次执行相同的查询语句，结果就会从缓存中获取二级缓存开启的条件：
 >
-> 二级缓存开启的条件：
+> a）在核心配置文件中，设置全局配置属性cacheEnabled="true"，默认为true，不需要设置
 >
-> a>在核心配置文件中，设置全局配置属性cacheEnabled="true"，默认为true，不需要设置
+> b）在映射文件中设置标签 <cache/> 
 >
-> b>在映射文件中设置标签 <cache/> 
+> c）二级缓存必须在SqlSession关闭或提交之后有效
 >
-> c>二级缓存必须在SqlSession关闭或提交之后有效
->
-> d>查询的数据所转换的实体类类型必须实现序列化的接口使二级缓存失效的情况：两次查询之间执行了任意的增删改，会使一级和二级缓存同时失效
+> d）查询的数据所转换的实体类类型必须实现序列化的接口使二级缓存失效的情况：两次查询之间执行了任意的增删改，会使一级和二级缓存同时失效
 >
 
 ## 10.3、二级缓存的相关配置
@@ -1109,17 +1102,17 @@ select <include refid="empColumns"></include> from t_emp
 > WEAK – 弱引用：更积极地移除基于垃圾收集器状态和弱引用规则的对象。
 >
 
-#### ②flushInterval属性：刷新间隔，单位毫秒
+#### ②  flushInterval属性：刷新间隔，单位毫秒
 
 > 默认情况是不设置，也就是没有刷新间隔，缓存仅仅调用语句时刷新
 >
 
-#### ③size属性：引用数目，正整数
+#### ③  size属性：引用数目，正整数
 
 > 代表缓存最多可以存储多少个对象，太大容易导致内存溢出
 >
 
-#### ④readOnly属性：只读， true/false
+#### ④  readOnly属性：只读， true/false
 
 > true：只读缓存；会给所有调用者返回缓存对象的相同实例。因此这些对象不能被修改。这提供了 很重要的性能优势；
 >
