--- a/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
+++ b/JAVA/Java--微服务核心/04.SSM/1.MyBatis.md
@@ -204,8 +204,8 @@ public interface UserMapper {
 		"http://mybatis.org/dtd/mybatis-3-mapper.dtd">
 <mapper namespace="com.atguigu.mybatis.mapper.UserMapper">
 	<!--int insertUser();-->
-	<nsert id="insertUser">
-		<insert into t_user values(null,'admin','123456',23,'男','12345@qq.com')
+	<insert id="insertUser">
+		insert into t_user values(null,'admin','123456',23,'男','12345@qq.com')
 	</insert>
 </mapper>
 ```
@@ -216,8 +216,7 @@ public interface UserMapper {
 //读取MyBatis的核心配置文件
 InputStream is = Resources.getResourceAsStream("mybatis-config.xml");
 //创建SqlSessionFactoryBuilder对象
-SqlSessionFactoryBuilder sqlSessionFactoryBuilder = new
-SqlSessionFactoryBuilder();
+SqlSessionFactoryBuilder sqlSessionFactoryBuilder = new SqlSessionFactoryBuilder();
 //通过核心配置文件所对应的字节输入流创建工厂类SqlSessionFactory，生产SqlSession对象
 SqlSessionFactory sqlSessionFactory = sqlSessionFactoryBuilder.build(is);
 //创建SqlSession对象，此时通过SqlSession对象所操作的sql都必须手动提交或回滚事务
@@ -290,23 +289,21 @@ System.out.println("结果："+result);
 
 > 核心配置文件中的标签必须按照固定的顺序：
 >
-> properties?,settings?,typeAliases?,typeHandlers?,objectFactory?,objectWrapperFactory?,refl
->
-> ectorFactory?,plugins?,environments?,databaseIdProvider?,mappers?
+> properties?,settings?,typeAliases?,typeHandlers?,objectFactory?,objectWrapperFactory?,reflectorFactory?,plugins?,environments?,databaseIdProvider?,mappers?
 >
 > ```xml
-> <?xml version="1.0" encoding="UTF-8" ?>
+><?xml version="1.0" encoding="UTF-8" ?>
 > <!DOCTYPE configuration
->         PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
->         "http://mybatis.org/dtd/mybatis-3-config.dtd">
-> <configuration>
-> 	<!--
->             MyBatis核心配置文件中，标签的顺序：
->             properties?,settings?,typeAliases?,typeHandlers?,
+>      PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
+>      "http://mybatis.org/dtd/mybatis-3-config.dtd">
+>    <configuration>
+>    	<!--
+>          MyBatis核心配置文件中，标签的顺序：
+>          properties?,settings?,typeAliases?,typeHandlers?,
 >             objectFactory?,objectWrapperFactory?,reflectorFactory?,
 >             plugins?,environments?,databaseIdProvider?,mappers?
-> 	-->
-> 	<!--引入properties文件-->
+>    	-->
+>    	<!--引入properties文件-->
 > 	<properties resource="jdbc.properties" />
 > 	<!--设置类型别名-->
 > 	<typeAliases>
@@ -326,10 +323,10 @@ System.out.println("结果："+result);
 > 			default：设置默认使用的环境的id
 > 	-->
 > 	<environments default="development">
->     <!--
->    		environment：配置某个具体的环境
-> 		属性：
-> 			id：表示连接数据库的环境的唯一标识，不能重复
+>  <!--
+> 		environment：配置某个具体的环境
+>    		属性：
+>    			id：表示连接数据库的环境的唯一标识，不能重复
 > 	-->
 > 	<environment id="development">
 > 		<!--
@@ -343,8 +340,8 @@ System.out.println("结果："+result);
 > 			<!--
 > 				dataSource：配置数据源
 > 				属性：
->                  type：设置数据源的类型
->                  type="POOLED|UNPOOLED|JNDI"
+>               type：设置数据源的类型
+>               type="POOLED|UNPOOLED|JNDI"
 >                     POOLED：表示使用数据库连接池缓存数据库连接
 >                     UNPOOLED：表示不使用数据库连接池
 >                     JNDI：表示使用上下文中的数据源
@@ -360,29 +357,29 @@ System.out.println("结果："+result);
 >                     <property name="password" value="${jdbc.password}"/>
 >    				</dataSource>
 >    			</environment>
-> 			<environment id="test">
+>    			<environment id="test">
 >              <transactionManager type="JDBC"/>
->              <dataSource type="POOLED">
+>           <dataSource type="POOLED">
 >                 <property name="driver" value="com.mysql.cj.jdbc.Driver"/>
 >                 <property name="url"value="jdbc:mysql://localhost:3306/ssmserverTimezone=UTC"/>
 >                 <property name="username" value="root"/>
 >                 <property name="password" value="123456"/>
-> 			</dataSource>
+>    			</dataSource>
 >    		</environment>
->    	</environments>
-> 	<!--引入映射文件-->
-> 	<mappers>
->  	<!--<mapper resource="mappers/UserMapper.xml"/>-->
->  	<!--
->          以包为单位引入映射文件
->             要求：
+> 	</environments>
+>    	<!--引入映射文件-->
+>    	<mappers>
+> 	<!--<mapper resource="mappers/UserMapper.xml"/>-->
+> 	<!--
+>        以包为单位引入映射文件
+>           要求：
 >             1、mapper接口所在的包要和映射文件所在的包一致
 >             2、mapper接口要和映射文件的名字一致
 >    	-->
 >    		<package name="com.atguigu.mybatis.mapper"/>
 >    	</mappers>
-> </configuration>
-> ```
+>    </configuration>
+>    ```
 
 # 4、MyBatis的增删改查
 
